data/derived/sp14/progs/unify/prog1895.ml.out
Characters 25-35:
  let rec mulByDigit i l = bigAdd l l + mulByDigit (i - 1) l;;
                           ^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
